# c1_ks_demos

./: .gitignore  Makefile.am  circular_disc.bash  circular_disc.cc  free_swelling_square.cc  hexagon.bash  hexagon.cc  pull_strip-linear.bash  pull_strip.bash  pull_strip.cc  rotated_square.bash  rotated_square.cc  rotated_square_upgraded.bash  rotated_square_upgraded.cc  star_trek.bash  star_trek.cc  template.bash  unrotated_square.cc
